--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@ body {
     background-color: #f5f5f5;
     color: #333;
   }
+
+/* Dark mode */
+body.dark-mode {
+    background-color: #333;
+    color: #fff;
+  }
+  
   
   header {
     background-color: #fff;
